--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from baymaxinu.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Nov 2023 13:12:06 GMT -->
 <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <title>BAYMAX INU</title>
+      <title>BAYMAX</title>
       <meta name="robots" content="max-image-preview:large">
       <link rel="alternate" type="application/rss+xml" title="BAYMAX INU » Feed" href="feed/index.html">
       <link rel="alternate" type="application/rss+xml" title="BAYMAX INU » Comments Feed" href="comments/feed/index.html">
@@ -361,7 +361,7 @@
                <div class="elementor-widget-wrap elementor-element-populated">
                   <div class="elementor-element elementor-element-cfa2fc1 bdt-cursor-effects-yes elementor-widget elementor-widget-image" data-id="cfa2fc1" data-element_type="widget" data-settings="{&quot;element_pack_cursor_effects_show&quot;:&quot;yes&quot;,&quot;element_pack_cursor_effects_source&quot;:&quot;image&quot;,&quot;element_pack_cursor_effects_image_src&quot;:{&quot;url&quot;:&quot;https:\/\/baymaxinu.com\/wp-content\/uploads\/2023\/05\/DEXTools-logo.png&quot;,&quot;id&quot;:532,&quot;size&quot;:&quot;&quot;,&quot;alt&quot;:&quot;&quot;,&quot;source&quot;:&quot;library&quot;}}" data-widget_type="image.default">
                      <div class="elementor-widget-container">
-                        <a href="https://www.dexview.com/bsc/0x0000">
+                        <a href="https://t.me/baymaxsolana">
                         <img decoding="async" width="163" height="60" src="baymaxinu/button.png" class="attachment-large size-large wp-image-531" alt="" loading="lazy">								</a>
                      </div>
                      <div class="bdt-cursor-effects">
@@ -561,47 +561,6 @@
       .elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:#69727d;color:#fff}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap{color:#69727d;border:3px solid;background-color:transparent}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap{margin-top:8px}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter{width:1em;height:1em}.elementor-widget-text-editor .elementor-drop-cap{float:left;text-align:center;line-height:1;font-size:50px}.elementor-widget-text-editor .elementor-drop-cap-letter{display:inline-block}</style>				<p><img decoding="async" class="alignnone wp-image-551" src="baymaxinu/tax-new.png" alt="" width="150" height="auto"></p>						</div>
       </div>
       </section>
-      <section class="elementor-section elementor-inner-section elementor-element elementor-element-234547a elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="234547a" data-element_type="section">
-      <div class="elementor-container elementor-column-gap-default">
-      <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-4d930d3" data-id="4d930d3" data-element_type="column">
-      <div class="elementor-widget-wrap elementor-element-populated">
-      <div class="elementor-element elementor-element-5685e7e elementor-widget elementor-widget-image" data-id="5685e7e" data-element_type="widget" data-widget_type="image.default">
-      <div class="elementor-widget-container">
-      <img decoding="async" width="526" height="359" src="baymaxinu/coin.png" class="attachment-large size-large wp-image-460" alt="" loading="lazy">															</div>
-      </div>
-      </div>
-      </div>
-      <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-3aef001" data-id="3aef001" data-element_type="column">
-      <div class="elementor-widget-wrap elementor-element-populated">
-      <div class="elementor-element elementor-element-ebe4cbe elementor-widget elementor-widget-image" data-id="ebe4cbe" data-element_type="widget" data-widget_type="image.default">
-      <div class="elementor-widget-container">
-      <img decoding="async" width="203" height="20" src="baymaxinu/contract-address.png" class="attachment-large size-large wp-image-461" alt="" loading="lazy">															</div>
-      </div>
-      <div class="elementor-element elementor-element-201ce7e elementor-widget__width-inherit elementor-widget-mobile__width-inherit elementor-widget elementor-widget-text-editor" data-id="201ce7e" data-element_type="widget" data-widget_type="text-editor.default">
-      <div class="elementor-widget-container">
-      <span title="Copy to Clipboard" class="copy-the-code-shortcode " data-target="" data-button-text="0x0000" data-button-copy-text="Copied to Clipboard" data-content="0x0000" data-copy-as="text" data-link="" style="color: ">0x0000</span>						</div>
-      </div>
-      <div class="elementor-element elementor-element-e690358 elementor-widget__width-auto elementor-widget elementor-widget-text-editor" data-id="e690358" data-element_type="widget" data-widget_type="text-editor.default">
-      <div class="elementor-widget-container">
-      <span title="Copy to Clipboard" class="copy-the-code-shortcode " data-target="" data-button-text="Copy Adress" data-button-copy-text="Copied to Clipboard" data-content="0x0000" data-copy-as="text" data-link="" style="color: ">Copy Adress</span>						</div>
-      </div>
-      <div class="elementor-element elementor-element-aab59ae elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="aab59ae" data-element_type="widget" data-widget_type="button.default">
-      <div class="elementor-widget-container">
-      <div class="elementor-button-wrapper">
-      <a class="elementor-button elementor-button-link elementor-size-sm" href="https://www.dexview.com/bsc/0x0000">
-      <span class="elementor-button-content-wrapper">
-      <span class="elementor-button-icon elementor-align-icon-right">
-      <i aria-hidden="true" class="fas fa-external-link-alt"></i>			</span>
-      <span class="elementor-button-text">View Chart</span>
-      </span>
-      </a>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-	  </div>
-      </section>
       </div>
       </div>
       </div>
@@ -727,7 +686,7 @@
       </div>
       <div class="elementor-element elementor-element-17b58c9 elementor-widget elementor-widget-image" data-id="17b58c9" data-element_type="widget" data-widget_type="image.default">
       <div class="elementor-widget-container">
-      <span style="font-size:40px;color:#cb1f38">PHASE 3</span></p>
+      <span style="font-size:40px;color:#cb1f38">Stage 3</span></p>
 	  </div>
       </div>
       <section class="elementor-section elementor-inner-section elementor-element elementor-element-1eedbba elementor-section-height-min-height elementor-section-boxed elementor-section-height-default" data-id="1eedbba" data-element_type="section">
@@ -858,13 +817,13 @@
      
       <div class="elementor-element elementor-element-9fa6a17 elementor-widget__width-initial bdt-cursor-effects-yes elementor-widget elementor-widget-image" data-id="9fa6a17" data-element_type="widget" data-settings="{&quot;element_pack_cursor_effects_show&quot;:&quot;yes&quot;,&quot;element_pack_cursor_effects_source&quot;:&quot;default&quot;,&quot;element_pack_cursor_effects_style&quot;:&quot;ep-cursor-style-1&quot;,&quot;element_pack_cursor_effects_speed&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:0.075,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
       <div class="elementor-widget-container">
-      <a href="https://twitter.com/Baymaxinu_BSC">
+      <a href="https://twitter.com/Baymax_Solana">
       <img decoding="async" width="379" height="108" src="baymaxinu/Frame-1000007592.png" class="attachment-large size-large wp-image-417" alt="" loading="lazy">								</a>
       </div>
       <div class="bdt-cursor-effects ep-cursor-style-1"><div id="bdt-ep-cursor-ball-effects-9fa6a17" class="ep-cursor-ball cotton-init" style="transform: translate(calc(-50% + 235px), calc(-50% + 701px));"></div><div id="bdt-ep-cursor-circle-effects-9fa6a17" class="ep-cursor-circle cotton-init" style="transform: translate(calc(-50% + 235px), calc(-50% + 701px));"></div></div></div>
       <div class="elementor-element elementor-element-51c693d elementor-widget__width-initial bdt-cursor-effects-yes elementor-widget elementor-widget-image" data-id="51c693d" data-element_type="widget" data-settings="{&quot;element_pack_cursor_effects_show&quot;:&quot;yes&quot;,&quot;element_pack_cursor_effects_source&quot;:&quot;default&quot;,&quot;element_pack_cursor_effects_style&quot;:&quot;ep-cursor-style-1&quot;,&quot;element_pack_cursor_effects_speed&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:0.075,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
       <div class="elementor-widget-container">
-      <a href="https://t.me/baymaxinu_bsc">
+      <a href="https://t.me/baymaxsolana">
       <img decoding="async" width="402" height="108" src="baymaxinu/Frame-1000007593.png" class="attachment-large size-large wp-image-418" alt="" loading="lazy">								</a>
       </div>
       <div class="bdt-cursor-effects ep-cursor-style-1"><div id="bdt-ep-cursor-ball-effects-51c693d" class="ep-cursor-ball cotton-init" style="transform: translate(calc(-50% + 235px), calc(-50% + 701px));"></div><div id="bdt-ep-cursor-circle-effects-51c693d" class="ep-cursor-circle cotton-init" style="transform: translate(calc(-50% + 235px), calc(-50% + 701px));"></div></div></div>
@@ -896,7 +855,7 @@
       </div>
       <div class="elementor-element elementor-element-7a1dc7e elementor-widget elementor-widget-heading" data-id="7a1dc7e" data-element_type="widget" data-widget_type="heading.default">
       <div class="elementor-widget-container">
-      <span class="elementor-heading-title elementor-size-default">© 2023 BAYMAX INU. All right reserved.</span>		</div>
+      <span class="elementor-heading-title elementor-size-default">© 2023 BAYMAX. All right reserved.</span>		</div>
       </div>
       </div>
       </div>
